--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div >
     <p>Your cart: {{cart.length}}</p>
     <product @add-to-cart="updateCart" :premium="premium"></product>
+    <product-review/>
   </div>
   </div>
   
